--- a/style.css
+++ b/style.css
@@ -93,8 +93,33 @@ ul{
     background-color: #3882F6;
     color: #E5E7EB;
     margin-top:50px;
-    margin-bottom:50px
+    margin-bottom:50px;
+    border-radius: 8px;
 }
+.footer-text{
+    margin-right:auto;
+    margin-left:150px;
+
+}
+.footer-text h4{
+    margin-bottom:0px;
+}
+.footer-text p{
+    margin-top:0px;
+}
+
+
+.footer-button{
+    /* border:2px solid red; */
+    margin-left:auto;
+    margin-right:150px;
+    padding:8px 35px;
+    border-radius: 8px;
+    border-color: #E5E7EB;
+    color: #E5E7EB;
+    border-style: solid;
+}
+
 
 li{
     list-style-type: None;
